--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <h3 class="section-tittle metodos_title">Método de recolección de información</h3>
   <div class="metodos_galery">
     <div class="metodos_card">
-      <img class="metodos_img" src="./assets/img/taller1.jpg" alt="persona desarrollando código basado en diagrama de flujo"
+      <img class="metodos_img" src="./assets/img/delphis.JPG" alt="persona desarrollando código basado en diagrama de flujo"
         width="370 px" />
       <p class="metodos_subtitle">Socialización Delphi</p>
     </div>
@@ -134,7 +134,7 @@
       <p class="metodos_subtitle">Diálogo cualitativo, interdisciplinario, y participativo en la obtención de datos a través de la observación</p>
     </div>
     <div class="metodos_card">
-      <img class="metodos_img" src="./assets/img/taller9.jpg" alt="persona desarrollando código basado en diagrama de flujo"
+      <img class="metodos_img" src="./assets/img/entrevista.JPG" alt="persona desarrollando código basado en diagrama de flujo"
         width="370 px" />
       <p class="metodos_subtitle">Entrevistas semiestructuradas</p>
     </div>
@@ -143,7 +143,7 @@
       <p class="metodos_subtitle">Dinámicas colectivas, desde relatos sensitivos comunitarios</p>
     </div>
     <div class="metodos_card">
-      <img class="metodos_img" src="./assets/img/taller5.jpg" alt="persona seleccionando paleta de colores" width="370 px" />
+      <img class="metodos_img" src="./assets/img/partera1.jpg" alt="persona seleccionando paleta de colores" width="370 px" />
       <p class="metodos_subtitle">Encuestas</p>
     </div>
   </div>    
