--- a/galeria.html
+++ b/galeria.html
@@ -18,11 +18,11 @@
     <nav class="navbar">
       <ul class="navbar_list">
         <li class="navbar_item"><a class="navbar_page" href="index.html">Home</a></li>
-        <li class="navbar_item"><a class="navbar_page current" href="enfoques.html">Enfoques</a></li>
+        <li class="navbar_item"><a class="navbar_page" href="enfoques.html">Enfoques</a></li>
         <li class="navbar_item"><a class="navbar_page" href="delphis.html">Sistematización Delphis</a></li>
         <li class="navbar_item"><a class="navbar_page" href="cabildos.html">Interacción Cabildos</a></li>
         <li class="navbar_item"><a class="navbar_page" href="componentes.html">Componentes de bienestar</a></li>
-        <li class="navbar_item"><a class="navbar_page" href="galeria.html">Galería</a></li>
+        <li class="navbar_item"><a class="navbar_page current" href="galeria.html">Galería</a></li>
         <li class="navbar_item"><a class="navbar_page" href="">Relatos Parteras</a></li>
       </ul>
     </nav>
