--- a/delphis.html
+++ b/delphis.html
@@ -10,7 +10,8 @@
   rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
-<body>
+</head>
+  <body>
   <!-- Header -->
   <header class="header">
     <a href="index.html"><span class="header_logo">MJBenitez</span></a>
