--- a/delphis.html
+++ b/delphis.html
@@ -105,6 +105,23 @@
             </p>
         </div>
     </div>
+
+    <div class="results_group">
+      <span class="section-tittle">Principios fundamentales para la atención de la salud en contextos rurales-comunitarios</span>
+      <p class="results_text">
+        Desde las observaciones e interpretación a cada una de las opiniones; <br><br>
+        Se precisa considerar principios, estratégicos para orientar la atención de la medicina tradicional e interculturalidad (<a href="https://www.paho.org/bol/dmdocuments/LINEAMIENTOS_SALUD_INTERCULTURALIDAD.pdf">Organización Panamericana de la Salud OPS/OMS en un modelo revisado en Bolivia</a>),  en este caso, adaptando y flexibilizando la comprensión a  un modelo de asistencia a la Salud Materna  – infantil, en el contexto de a la ruralidad, las realidades andinas; sus condiciones socioculturales y demográficas, ubicándonos en el Cantón Cotacachi, de acuerdo con el acercamiento de cada uno de los grupos intersectorialmente relacionados, es necesario, según las y los expertos los principios inciden de la siguiente manera, para cada uno de los sistemas de salud que el estudio de caso observa:          
+      </p>
+      <div class="results_grafica">
+      <canvas id="grafica8"></canvas></div>
+      <div class="results_info">
+          <span class="section-subtitle">Análisis y descripción:</span>
+          <p class="results_text">
+            Las y los expertos acentúan mayor incidencia, sobre el principio de “Reciprocidad”, reconocido este, en la medicina tradicional como una afirmación a las condiciones de inclusión y horizontalidad, con apertura a la otredad (reconocer y respetar la diversidad) con empatía y con solidaridad. Seguido del principio “Armonía”: en concordancia y respeto con los principios de cuidado con autodeterminación, en este caso al Derecho a la salud, en concordancia con determinantes culturales (lengua, cosmovisión, creencias, costumbres y valores, etc). De la misma forma, el factor: “Revalorización cultural” que envuelve, más allá de la protección del acervo cultural de los pueblos y comunidades, la apreciación, protección, agradecimiento, y reconocimiento a la medicina ancestral. El principio de “Integralidad”, que sugiere la complementación intercultural, desde la pertinencia y coherencia en los procesos de promoción, prevención, atención y rehabilitación de la salud de las mujeres, familias, comunidades en el entorno en que esta cohabita, es decir en y para la ruralidad. <br><br>
+            Al igual que la “interculturalidad”, desde el respeto a los saberes, sentires, conocimientos, tradiciones y prácticas de los pueblos originarios; aceptando en pluralismo en la Salud, mismo que representa la dinámica e interacción entre saberes-culturalmente aceptados y respetados, sin diferenciación o discriminación.  Resalta la “Intraculturalidad”, como el ejercicio de recuperación, fortalecimiento y revitalización de la identidad cultural en condición a la Salud de los pueblos y comunidades, misma que debe y necesita ser reivindicada hacia y desde adentro (desde el sistema de la salud tradicional, a las y los sabedores de la misma) en estructura y función. <br>
+          </p>
+      </div>
+  </div>
   </section>
 </div>
 <footer>
