--- a/enfoques.html
+++ b/enfoques.html
@@ -14,7 +14,7 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <a href="index.html"><span class="header_logo">MJBenitez</span></a>
+    <img src="./assets/img/png/comiteCentralMujeres.png" alt="Logo comité central de mujeres UNORCAC" class="logo">
     <nav class="navbar">
       <ul class="navbar_list">
         <li class="navbar_item"><a class="navbar_page" href="index.html">Home</a></li>
@@ -26,6 +26,10 @@
         <li class="navbar_item"><a class="navbar_page" href="">Relatos Parteras</a></li>
       </ul>
     </nav>
+    <div class="header_logos">
+      <img src="./assets/img/png/consejoSaludAncestral.png" alt="" class="logo">
+      <img src="./assets/img/png/tierraDeHombres.png" alt="" class="logo">
+    </div>
   </header>
   <div class="content bg-pink">
     <div class="enfoques">
