--- a/componentes.html
+++ b/componentes.html
@@ -15,7 +15,7 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <a href="index.html"><span class="header_logo">MJBenitez</span></a>
+    <img src="./assets/img/png/comiteCentralMujeres.png" alt="Logo comité central de mujeres UNORCAC" class="logo">
     <nav class="navbar">
       <ul class="navbar_list">
         <li class="navbar_item"><a class="navbar_page" href="index.html">Home</a></li>
@@ -27,6 +27,10 @@
         <li class="navbar_item"><a class="navbar_page" href="">Relatos Parteras</a></li>
       </ul>
     </nav>
+    <div class="header_logos">
+      <img src="./assets/img/png/consejoSaludAncestral.png" alt="" class="logo">
+      <img src="./assets/img/png/tierraDeHombres.png" alt="" class="logo">
+    </div>
   </header>
 
 <!-- Contenido de la página -->
