--- a/enfoques.html
+++ b/enfoques.html
@@ -23,7 +23,7 @@
         <li class="navbar_item"><a class="navbar_page" href="cabildos.html">Interacción Cabildos</a></li>
         <li class="navbar_item"><a class="navbar_page" href="componentes.html">Componentes de bienestar</a></li>
         <li class="navbar_item"><a class="navbar_page" href="galeria.html">Galería</a></li>
-        <li class="navbar_item"><a class="navbar_page" href="">Relatos Parteras</a></li>
+        <!-- <li class="navbar_item"><a class="navbar_page" href="">Relatos Parteras</a></li> -->
       </ul>
     </nav>
     <div class="header_logos">
