fix some responsive

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       <div>
         <h4 class="modal_title">Actores intersectoriales</h4>
         <ul class="modal_info">
-          <li>Comité Central de Mujeres de UNORCAC.</li><br>
-          <li>Consejo de Salud Ancestral Hampik Warmikuna, Cotacachi.</li><br>
-          <li>Dirección Distrital de Salud 10D03, Cotacachi.</li><br>
-          <li>Escuela de partería “Unanchu Mamakuna”.</li><br>
-          <li>Técnicos de Atención Primaria en Salud (TAPS), Cotacachi. </li><br>
-          <li>Técnicas del Ministerio de Inclusión Económica y Social (MIES), territorio de Cotacachi.</li><br>
-          <li>Técnicas del Ministerio de Educación (MINEDUC)-Coordinación DECE, Cotacachi. </li><br>
+          <li>Comité Central de Mujeres de UNORCAC.</li>
+          <li>Consejo de Salud Ancestral Hampik Warmikuna, Cotacachi.</li>
+          <li>Dirección Distrital de Salud 10D03, Cotacachi.</li>
+          <li>Escuela de partería “Unanchu Mamakuna”.</li>
+          <li>Técnicos de Atención Primaria en Salud (TAPS), Cotacachi. </li>
+          <li>Técnicas del Ministerio de Inclusión Económica y Social (MIES), territorio de Cotacachi.</li>
+          <li>Técnicas del Ministerio de Educación (MINEDUC)-Coordinación DECE, Cotacachi. </li>
           <li>Secretaria ejecutiva CCPD, y Junta Cantonal de Protección de Derechos JCPD, Cotacachi. </li>
         </ul>
       </div>
@@ -40,7 +40,10 @@
 
   <!-- Header -->
   <header class="header">
-    <img src="./assets/img/png/comiteCentralMujeres.png" alt="Logo comité central de mujeres UNORCAC" class="logo">
+    <div class="header_logos">
+      <img src="./assets/img/png/comiteCentralMujeres.png" alt="Logo comité central de mujeres UNORCAC" class="logo">
+      <img src="./assets/img/png/consejoSaludAncestral.png" alt="" class="logo">
+    </div>
     <nav class="navbar">
       <ul class="navbar_list">
         <li class="navbar_item"><a class="navbar_page current" href="index.html">Home</a></li>
@@ -52,10 +55,7 @@
         <!-- <li class="navbar_item"><a class="navbar_page" href="">Relatos Parteras</a></li> -->
       </ul>
     </nav>
-    <div class="header_logos">
-      <img src="./assets/img/png/consejoSaludAncestral.png" alt="" class="logo">
-      <img src="./assets/img/png/tierraDeHombres.png" alt="" class="logo">
-    </div>
+    <img src="./assets/img/png/tierraDeHombres.png" alt="" class="logo">
   </header>
 
   <!-- Contenido de la página -->
@@ -64,7 +64,7 @@
       <h1 class="text-ppal">DIAGNÓSTICO SOBRE LA SALUD MATERNA-INFANTIL Y LA POBREZA MULTIDIMENSIONAL</h1>
       <a href="./files/CUADRO DE RESUMEN - RESULTADOS SALUD MATERNA-INFANTIL Y LA POBREZA MULTIDIMENSIONAL.pdf"
         download><button type="button" class="btn-ppal">
-          Descargar informe
+          Descargar resultados del diagnóstico
         </button></a>
     </section>
 
