--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <img src="./assets/img/png/tierraDeHombres.png" alt="" class="logo">
   </header>
 
-  <!-- Contenido de la página -->
+<!-- Contenido de la página -->
+<!-- Sección Hero -->
   <div class="content">
     <section class="banner-ppal">
       <h1 class="text-ppal">DIAGNÓSTICO SOBRE LA SALUD MATERNA-INFANTIL Y LA POBREZA MULTIDIMENSIONAL</h1>
@@ -68,12 +69,13 @@
         </button></a>
     </section>
 
+<!-- Sección propósito -->
     <div class="proposito">
-      <img src="./assets/img/partera1.jpg" alt="" class="proposito_img">
       <h3 class="section-tittle">Proyecto para mejorar la salud materna -infantil en las comunidades indígenas de
         Cotacachi, Ecuador 2022-2023.</h3>
+      <img src="./assets/img/partera1.jpg" alt="" class="proposito_img">
     </div>
-    <!-- actores -->
+<!--Sección actores -->
     <h3 class="section-tittle">Actores determinantes</h3>
     <section class="actores">
       <div class="actores_item">
@@ -114,7 +116,7 @@
         </p>
       </div>
     </section>
-
+<!-- Sección métodos -->
     <section class="metodos bg-pink">
       <h3 class="section-tittle metodos_title">Método de recolección de información</h3>
       <div class="metodos_galery">
@@ -160,6 +162,7 @@
       </div>
     </section>
 
+<!-- Sección Glosario -->
     <section class="glosario" id="glosario">
       <h3 class="section-tittle">Glosario de términos</h3>
       <dl class="glosario_list">
