--- a/enfoques.html
+++ b/enfoques.html
@@ -12,9 +12,12 @@
 </head>
 
 <body>
-  <!-- Header -->
+ <!-- Header -->
   <header class="header">
-    <img src="./assets/img/png/comiteCentralMujeres.png" alt="Logo comité central de mujeres UNORCAC" class="logo">
+    <div class="header_logos">
+      <img src="./assets/img/png/comiteCentralMujeres.png" alt="Logo comité central de mujeres UNORCAC" class="logo">
+      <img src="./assets/img/png/consejoSaludAncestral.png" alt="" class="logo">
+    </div>
     <nav class="navbar">
       <ul class="navbar_list">
         <li class="navbar_item"><a class="navbar_page" href="index.html">Home</a></li>
@@ -26,11 +29,14 @@
         <!-- <li class="navbar_item"><a class="navbar_page" href="">Relatos Parteras</a></li> -->
       </ul>
     </nav>
-    <div class="header_logos">
-      <img src="./assets/img/png/consejoSaludAncestral.png" alt="" class="logo">
-      <img src="./assets/img/png/tierraDeHombres.png" alt="" class="logo">
+    <div class="menu">
+        <svg class="menu_icon">
+          <use href="./assets/img/icons.svg#icon-menu"></use>
+        </svg>
     </div>
+    <img src="./assets/img/png/tierraDeHombres.png" alt="" class="logo">
   </header>
+
   <div class="content bg-pink">
     <div class="enfoques">
     <h3 class="section-tittle">Enfoques análisis</h3>
