--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <!-- <li class="navbar_item"><a class="navbar_page" href="">Relatos Parteras</a></li> -->
       </ul>
     </nav>
+    <div class="menu">
+        <svg class="menu_icon">
+          <use href="./assets/img/icons.svg#icon-menu"></use>
+        </svg>
+    </div>
     <img src="./assets/img/png/tierraDeHombres.png" alt="" class="logo">
   </header>
 
