all pages menu ersponsive

--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
     </div>
   </footer>
   <script src="./js/script0.js"></script>
+  <script src="./js/header.js"></script>
 </body>
 
 </html>
