--- a/cabildos.html
+++ b/cabildos.html
@@ -291,5 +291,6 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
   <script src="./js/script2.js"></script>
+  <script src="./js/header.js"></script>
 </body>
 </html>
