fix menu mobil and figcaptions

--- a/componentes.html
+++ b/componentes.html
@@ -83,11 +83,20 @@
             El diagnóstico sobre la salud materna - infantil en 16 comunidades rurales del cantón Cotacachi, y los efectos de la pobreza multidimensional, enfatiza en la comprensión del bienestar, desde la comprensión  de la idea del <b>bienestar subjetivo</b>,  como la postura evaluativa que las personas tienen con relación a su bienestar tal y como lo viven, es decir, cómo lo perciben, desde dos componentes: el emocional –Psicológica/ Psicosomática  relacionada con el nivel de felicidad, el cual trae consigo cargas afectivas, y el cognitivo, que refiere a las evaluaciones sobre la satisfacción de vida; adaptado a la comprensión de la satisfacción materna. <br><br>
             Dentro de  este análisis, se enfatiza en la interacción y correlación de la diversidad de factores  y categorías que tienen relación directa, en este caso de estudio, con el bienestar, y que pueden ser considerados como influencias causales, tales como <b>características demográficas/socio-demográficas, de la salud, la interacción social, las actividades socioeconómicas, socioculturales, sobre este último, se encuentran presentes dos componentes (afectivo y cognitivo)</b>, en los que predominan, en la felicidad; como elemento afectivo, y en la satisfacción de vida, como elemento el cognitivo. Así como, los componentes del bienestar subjetivo , en referencia a la Salud Materna – infantil. Factores orientados desde una cartografía social-cognitiva, donde se observan y analizan las condiciones presentes,  de la  vida de las mujeres embarazadas y madres de niños menores de cinco años, respecto a la satisfacción subjetiva interrelacionadas al ideal de bienestar,  y a categorías esenciales; como la Salud emocional-mental  de la mujer gestante, y la madre,  y su  satisfacción personal (familia-sociedad: seguridad – estabilidad emocional, así como las seguridad financiera, salud), desde los siguientes indicadores: <br>
         </p>
-        <img class="bienestarSubjetivo_img" src="./assets/img/bs-tbl1.png" alt="">
+        <figure class="bienestarSubjetivo_img">
+            <img src="./assets/img/bs-tbl1.png" alt="">
+            <figcaption>Factores determinantes para la comprensión de la Satisfacción materna
+(componentes ubicados-adaptados de acuerdo con los testimonios de las madres-mujeres gestantes)</figcaption>
+        </figure>
         <p class="bienestarSubjetivo_info">
             Desde una revisión a las  dimensiones correlacionadas a los enfoques que el presente estudio ha precisado, así como, reiterando los componentes que se reflejan en la dinámica de estudio biopsicosocial, de acuerdo con las aspiraciones y limitaciones de las mujeres respecto a su parto, embarazo y las limitaciones para garantizar bienestar a sus hijos(as) en sus primeras infancias: <br>
         </p>
-        <img class="bienestarSubjetivo_img" src="./assets/img/bs-tbl2.png" alt="">
+        <figure class="bienestarSubjetivo_img">
+            <img src="./assets/img/bs-tbl2.png" alt="">
+            <figcaption>Correlación de enfoques
+*Limitaciones de las mujeres gestantes, y madres de niños(as) menores de cinco años, respecto a las condiciones de bienestar
+(componentes ubicados-adaptados de acuerdo con los testimonios de las madres-mujeres gestantes)</figcaption>
+        </figure>
       </section>
 
       <section class="dinColectiva">
