--- a/cabildos.html
+++ b/cabildos.html
@@ -203,7 +203,7 @@
     </div>
 
     <div class="results_group">
-        <span class="section-tittle">Prioridades de atención factor: Derechos</span>
+        <span class="section-tittle">Prioridades de atención factor: Derechos y Salud</span>
         <div class="results_grafica">
         <canvas id="grafica3"></canvas></div>
         <div class="results_info">
